--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,46 +1,3 @@
-body {
+html {
     font-family: Montserrat;
-}
-
-a {
-    text-decoration: none;
-}
-
-li {
-    list-style: none;
-}
-
-/* NAVBAR STYLING STARTS */
-.navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: #f8f0c6;
-    color: black;
-}
-
-.headerLogo {
-    width: 120px;
-    border-radius: 10%;
-}
-
-.nav-links a {
-    color: black;
-}
-
-/* NAVBAR MENU */
-.menu {
-display: flex;
-gap: 1em;
-font-size: 18px;
-}
-
-.menu li:hover {
-background-color: #fffdd1;
-border-radius: 10px;
-}
-
-.menu li {
-padding: 5px 14px;
 }
