--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,105 @@
-html {
-    font-family: Montserrat;
+:root {
+    --f12: 0.8rem;
+    --f16: 1rem;
+    --f20: 1.25rem;
+    --f25: 1.563rem;
+    --f31: 1.953rem;
+    --f39: 2.441rem;
+    --f48: 3.052rem;
+  }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+html {
+    font-size: 100%;
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.75;
+}
+
+h1, h2, h3, h4, h5 {
+    margin: 2rem 0 1.38rem;
+    line-height: 1.3;
+  }
+  
+h1 {
+margin-top: 0;
+font-size: var(--f48);
+}
+
+h2 {font-size: var(--f39);}
+
+h3 {font-size: var(--f31);}
+
+h4 {font-size: var(--f25);}
+
+h5 {font-size: var(--f20);}
+
+a {text-decoration: none;}
+
+
+/* NAVBAR STYLING STARTS */
+#navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+    padding-right: 3rem;
+    background-color: #262626;
+    color: #fff;
+}
+
+.nav-links a, #logo a {
+    color: #fff;
+}
+
+#logo {
+    font-size: var(--f31);
+}
+
+.menu {
+    display: flex;
+    gap: 1em;
+    font-size: var(--f20);
+}
+
+.menu li:hover {
+    background-color: #525252;
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+.menu li {
+    padding: 5px 14px;
+    list-style: none;
+}
+
+
+#header-genres-list {
+    background-color: #262626;
+    margin-top: 5px;
+    position: absolute;
+    display: none;
+    border-radius: 8px;
+}
+
+#header-genres-list li {
+    padding: 0.5em;
+    width: auto;
+    text-align: center;
+}
+
+#header-genres-list li:hover {
+    background-color: #525252;
+}
+.genres:hover #header-genres-list {
+    display: block;
+}
+
+
+
 
 .carousel {
     align-items: center;
