--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,23 +19,31 @@ html {
     line-height: 1.75;
 }
 
+body {
+    background-color: #181818;
+    color: #ffffff;
+}
+
+p {
+    margin-left: 0.5rem;
+}
+
 h1, h2, h3, h4, h5 {
-    margin: 2rem 0 1.38rem;
+    margin-top: 2rem;
+    margin-left: 0.5rem;
     line-height: 1.3;
   }
   
 h1 {
 margin-top: 0;
-font-size: var(--f48);
+font-size: var(--f39);
 }
 
-h2 {font-size: var(--f39);}
+h2 {font-size: var(--f31);}
 
-h3 {font-size: var(--f31);}
+h3 {font-size: var(--f25);}
 
-h4 {font-size: var(--f25);}
-
-h5 {font-size: var(--f20);}
+h4 {font-size: var(--f20);}
 
 a {text-decoration: none;}
 
@@ -47,16 +55,21 @@ a {text-decoration: none;}
     justify-content: space-between;
     padding: 1rem;
     padding-right: 3rem;
-    background-color: #262626;
-    color: #fff;
+    background-color: #000000;
 }
 
-.nav-links a, #logo a {
-    color: #fff;
+.nav-links a {
+    color: #ffffff;
 }
+
 
 #logo {
     font-size: var(--f31);
+    font-weight: bold;
+}
+
+#logo a {
+    color: #F40612;
 }
 
 .menu {
@@ -66,19 +79,19 @@ a {text-decoration: none;}
 }
 
 .menu li:hover {
-    background-color: #525252;
+    background-color: #F40612;
     border-radius: 5px;
     transition: 0.3s ease;
 }
 
 .menu li {
-    padding: 5px 14px;
     list-style: none;
+    padding: 0.3rem;
 }
 
 
 #header-genres-list {
-    background-color: #262626;
+    background-color: #000000;
     margin-top: 5px;
     position: absolute;
     display: none;
@@ -92,7 +105,7 @@ a {text-decoration: none;}
 }
 
 #header-genres-list li:hover {
-    background-color: #525252;
+    background-color: #F40612;
 }
 .genres:hover #header-genres-list {
     display: block;
@@ -126,19 +139,18 @@ a {text-decoration: none;}
 
 
 .carousel-button {
-    background: #262626;
+    background: #181818;
     border: 0;
-    color: white;
+    color: #ffffff;
     cursor: pointer;
     font-size: 50px;
     font-weight: bold;
     transition: opacity 0.25s;
     opacity: 0.1;
-    height: 270px;
 }
 
 .carousel-button:hover {
-    opacity: 0.5;
+    opacity: 1;
 }
 
 
@@ -159,39 +171,42 @@ a {text-decoration: none;}
 
 .modal-content {
     position: relative;
-    background-color: #fefefe;
+    background-color: #181818;
     margin: auto;
     padding: 0;
-    border: 1px solid #888;
+    border: 1px solid grey;
     width: 80%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
+}
+
+.modal-content h2{
+    margin: 1rem;
 }
 
 .modal-header {
     padding: 2px 16px;
-    background-color: #5cb85c;
-    color: white;
+    background-color: #000000;
+    color: #ffffff;
 }
 
 .modal-body {
     padding: 2px 16px;
 }
 
+.modal-body ul {
+    list-style: none;
+}
 
 .close {
-    color: white;
+    color: #ffffff;
     float: right;
-    font-size: 28px;
+    font-size: var(--f39);
     font-weight: bold;
 }
   
 .close:hover,
 .close:focus {
-    color: #000;
+    color: #F40612;
     text-decoration: none;
     cursor: pointer;
 }
