Modify modal style

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,28 +180,27 @@ a {text-decoration: none;}
 }
 
 
-/* The Modal (background) */
+/* MODAL STYLING STARTS */
 .modal {
     display: none;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    padding-bottom: 100px;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
   }
 
 .modal-content {
     position: relative;
     background-color: #181818;
     margin: auto;
-    padding: 0;
     border: 1px solid grey;
-    width: 80%;
+    width: 50%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
@@ -216,11 +215,21 @@ a {text-decoration: none;}
 }
 
 .modal-body {
-    padding: 2px 16px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1rem;
 }
 
 .modal-body ul {
     list-style: none;
+}
+
+.modal-body p {
+    margin-right: 1rem;
+}
+
+.modal-body h4 {
+    margin: 0;
 }
 
 .close {
