--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@
     --f31: 1.953rem;
     --f39: 2.441rem;
     --f48: 3.052rem;
-  }
+}
 
 * {
     margin: 0;
@@ -29,15 +29,16 @@ p {
     margin-left: 0.5rem;
 }
 
-h1, h2, h3, h4, h5 {
+h2, h3, h4, h5 {
     margin-top: 2rem;
     margin-left: 0.5rem;
     line-height: 1.3;
-  }
+}
   
 h1 {
-    margin-top: 0px;
+    margin-left: 0.5rem;
     margin-bottom: 1rem;
+    line-height: 1.3;
     font-size: var(--f39);
 }
 
@@ -54,10 +55,11 @@ a {text-decoration: none;}
     padding-top: 1rem;
 }
 
+
+/* PLAY BUTTON STYLING STARTS */
 .play-button {
     border: 0;
     background: transparent;
-    box-sizing: border-box;
     width: 0;
     height: 74px;
     border-color: transparent transparent transparent #ffffff;
@@ -68,13 +70,16 @@ a {text-decoration: none;}
     transition: opacity 0.25s;
     opacity: 0.5;
 }
+
 .play-button.paused {
     border-style: double;
     border-width: 0px 0 0px 60px;
 }
+
 .play-button:hover {
     opacity: 1;
 }
+
 
 /* NAVBAR STYLING STARTS */
 #navbar {
@@ -101,6 +106,7 @@ a {text-decoration: none;}
 
 .menu {
     display: flex;
+    flex-wrap: wrap;
     gap: 1em;
     font-size: var(--f20);
 }
@@ -121,12 +127,12 @@ a {text-decoration: none;}
     margin-top: 5px;
     position: absolute;
     display: none;
+    z-index: 1;
     border-radius: 8px;
 }
 
 #header-genres-list li {
     padding: 0.5em;
-    width: auto;
     text-align: center;
 }
 
@@ -185,8 +191,8 @@ a {text-decoration: none;}
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 5%;
+    padding-bottom: 5%;
     left: 0;
     top: 0;
     width: 100%;
@@ -200,8 +206,7 @@ a {text-decoration: none;}
     background-color: #181818;
     margin: auto;
     border: 1px solid grey;
-    width: 50%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    width: 70%;
 }
 
 .modal-content h2{
