--- a/styles/styles.css
+++ b/styles/styles.css
@@ -210,7 +210,9 @@ a {text-decoration: none;}
 }
 
 .modal-content h2{
-    margin: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0;
 }
 
 .modal-header {
