--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,8 +91,23 @@ a {text-decoration: none;}
     background-color: #000000;
 }
 
+.nav-links {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    gap: 1rem;
+    font-size: var(--f20);
+}
+
 .nav-links a {
     color: #ffffff;
+    padding: 1rem;
+}
+
+.nav-links li:hover {
+    background-color: #F40612;
+    border-radius: 5px;
+    transition: 0.3s ease;
 }
 
 #logo {
@@ -104,24 +119,6 @@ a {text-decoration: none;}
     color: #F40612;
 }
 
-.menu {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1em;
-    font-size: var(--f20);
-}
-
-.menu li:hover {
-    background-color: #F40612;
-    border-radius: 5px;
-    transition: 0.3s ease;
-}
-
-.menu li {
-    list-style: none;
-    padding: 0.3rem;
-}
-
 #header-genres-list {
     background-color: #000000;
     margin-top: 5px;
@@ -129,6 +126,7 @@ a {text-decoration: none;}
     display: none;
     z-index: 1;
     border-radius: 8px;
+    list-style: none;
 }
 
 #header-genres-list li {
